--- a/src/piano_online/index.html
+++ b/src/piano_online/index.html
@@ -45,7 +45,8 @@
         </ul>
       </div>
     </main>
-    <div id="footer">
+
+    <footer id="main-footer">
       <div class="social-list">
         <a href="javascript:void(0)"><i class="ti-facebook"></i></a>
         <a href="javascript:void(0)"><i class="ti-instagram"></i></a>
@@ -54,6 +55,6 @@
         <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
         <a href="javascript:void(0)"><i class="ti-linkedin"></i></a>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
