feature:implement home page

--- a/src/home.html
+++ b/src/home.html
@@ -37,5 +37,6 @@
       </section>
       <!-- start language      -->
     </main>
+    <script type="module" src="./javascripts/main.js"></script>
   </body>
 </html>
