--- a/src/home.html
+++ b/src/home.html
@@ -34,6 +34,8 @@
             <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
           </li>
         </ul>
+        <!-- this section will be render by template -->
+        //TODO: this section will be render by template
       </section>
       <!-- end language        -->
 
@@ -44,6 +46,8 @@
           <p class="text text--xl text--light">Add new word</p>
         </div>
         <div class="card__list">
+          <!-- this section will be render by template -->
+          //TODO: this section will be render by template
           <div class="card">
             <img class="card__picture" src="https://th.bing.com/th/id/R.f6d19108472c1a6c0883cc3c5f1f28ac?rik=pA22UQYQWktZcg&riu=http%3a%2f%2fobrazki.4ever.eu%2fdata%2fdownload%2frysunkowe%2fhello%2c-rysunkowa-postac%2c-chmury-235781.jpg%3fno-logo&ehk=bfeXHm%2bGU3NSDQf4bHxC1DewSvuDQRZ1qfKHlQHeu6o%3d&risl=&pid=ImgRaw&r=0" alt="picture" />
             <p class="text text--xl card__term">Hello</p>
