feat:update naming

--- a/src/home.html
+++ b/src/home.html
@@ -25,11 +25,11 @@
       <!-- start language      -->
       <section class="language">
         <ul class="language__list">
-          <li class="text text--2xl language__item">
+          <li class="text text--xl language__item">
             English
             <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
           </li>
-          <li class="text text--2xl language__item">
+          <li class="text text--xl language__item">
             China
             <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
           </li>
