feat:update naming

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <main class="main-content container">
       <form class="login-form" novalidate>
         <div class="login-form__header">
-          <p class="text text--3xl text--extrabold">Welcome back</p>
+          <p class="text text--xxl text--extrabold">Welcome back</p>
           <img src="assets/images/login-image.png" alt="login-image" class="login-form__image" />
         </div>
         <div class="login-form__body">
