--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
     <!-- start header        -->
     <header class="main-header">
       <div class="header__content container">
-        <h1 class="text text--light text--lg text--extrabold text--uppercase">Flashcards</h1>
+        <h1 class="text text--light text--md text--extrabold text--uppercase">Flashcards</h1>
         <div class="header__search">
           <input type="text" placeholder="Find your vocabulary" class="header__search__input" />
           <img src="assets/icons/search.svg" alt="icon-search" class="header__search__icon" />
         </div>
-        <a href="#" class="text text--light text--lg text--uppercase header__information">About</a>
+        <a href="#" class="text text--light text--md text--uppercase header__information">About</a>
       </div>
     </header>
     <!-- end header          -->
@@ -24,7 +24,7 @@
     <main class="main-content container">
       <form class="login-form" novalidate>
         <div class="login-form__header">
-          <p class="text text--3xl text--extrabold">Welcome back</p>
+          <p class="text text--xxl text--extrabold">Welcome back</p>
           <img src="assets/images/login-image.png" alt="login-image" />
         </div>
         <div class="login-form__body">
