bugfix:fix comment

--- a/src/home.html
+++ b/src/home.html
@@ -8,7 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- start header        -->
     <header class="main-header">
       <div class="header__content container">
         <h1 class="text text--light text--lg text--extrabold text--uppercase">Flashcards</h1>
@@ -19,12 +18,11 @@
         <a href="#" class="text text--light text--lg text--uppercase header__information">About</a>
       </div>
     </header>
-    <!-- end header          -->
 
     <main class="main-content container">
-      <!-- start language      -->
       <section class="language">
         <ul class="language__list">
+          <!-- TODO: This section will be render by template -->
           <li class="text text--xl language__item">
             English
             <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
@@ -34,12 +32,8 @@
             <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
           </li>
         </ul>
-        <!-- this section will be render by template -->
-        //TODO: this section will be render by template
       </section>
-      <!-- end language        -->
 
-      <!-- start cards         -->
       <section class="cards">
         <div class="cards__add">
           <img src="assets/icons/add.svg" alt="icon-add" />
@@ -69,7 +63,6 @@
           </div>
         </div>
       </section>
-      <!-- end cards           -->
     </main>
 
     <script type="module" src="./javascripts/main.js"></script>
