bugfix:fix line of code

--- a/src/home.html
+++ b/src/home.html
@@ -10,20 +10,12 @@
   <body>
     <header class="main-header">
       <div class="header__content container">
-        <h1 class="text text--light text--md text--extrabold text--uppercase">
-          Flashcards
-        </h1>
+        <h1 class="text text--light text--md text--extrabold text--uppercase">Flashcards</h1>
         <div class="header__search">
-          <input
-            type="text"
-            placeholder="Find your vocabulary"
-            class="header__search__input"
-          />
+          <input type="text" placeholder="Find your vocabulary" class="header__search__input" />
           <img src="assets/icons/search.svg" class="header__search__icon" />
         </div>
-        <a href="#" class="text text--light text--md text--uppercase header__information"
-          >About</a
-        >
+        <a href="#" class="text text--light text--md text--uppercase header__information">About</a>
       </div>
     </header>
 
@@ -33,19 +25,11 @@
           <!-- TODO: This section will be render by template -->
           <li class="text text--xl language__item">
             English
-            <img
-              src="assets/icons/delete.svg"
-              alt="icon-delete"
-              class="language__delete"
-            />
+            <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
           </li>
           <li class="text text--lg language__item">
             China
-            <img
-              src="assets/icons/delete.svg"
-              alt="icon-delete"
-              class="language__delete"
-            />
+            <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
           </li>
         </ul>
       </section>
@@ -131,11 +115,7 @@
           </div>
           <div class="modal-card__inputs">
             <label for="description" class="text text--lg">Description</label>
-            <textarea
-              id="description"
-              name="description"
-              class="modal-card__input"
-            ></textarea>
+            <textarea id="description" name="description" class="modal-card__input"></textarea>
             <p class="text text--sm">error</p>
           </div>
         </div>
