--- a/src/home.html
+++ b/src/home.html
@@ -23,60 +23,17 @@
       <section class="language">
         <ul class="language__list">
           <!-- TODO: This section will be render by template -->
-          <li class="text text--xl language__item">
-            English
-            <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
-          </li>
-          <li class="text text--lg language__item">
-            China
-            <img src="assets/icons/delete.svg" alt="icon-delete" class="language__delete" />
-          </li>
         </ul>
+        <img src="assets/icons/add.svg" alt="icon-add" class="language__add" />
       </section>
 
       <section class="cards">
         <div class="cards__add">
           <img src="assets/icons/add.svg" alt="icon-add" />
-          <p class="text text--xl text--light">Add new word</p>
+          <p class="text text--lg text--light">Add new word</p>
         </div>
         <div class="card__list">
           <!-- TODO: this section will be render by template -->
-          <div class="card">
-            <img
-              class="card__picture"
-              src="https://th.bing.com/th/id/R.f6d19108472c1a6c0883cc3c5f1f28ac?rik=pA22UQYQWktZcg&riu=http%3a%2f%2fobrazki.4ever.eu%2fdata%2fdownload%2frysunkowe%2fhello%2c-rysunkowa-postac%2c-chmury-235781.jpg%3fno-logo&ehk=bfeXHm%2bGU3NSDQf4bHxC1DewSvuDQRZ1qfKHlQHeu6o%3d&risl=&pid=ImgRaw&r=0"
-              alt="picture"
-            />
-            <p class="text text--xl card__term">Hello</p>
-            <p class="text text--blue text--xl card__type">Noun</p>
-          </div>
-          <div class="card">
-            <img
-              class="card__picture"
-              src="https://th.bing.com/th/id/R.f6d19108472c1a6c0883cc3c5f1f28ac?rik=pA22UQYQWktZcg&riu=http%3a%2f%2fobrazki.4ever.eu%2fdata%2fdownload%2frysunkowe%2fhello%2c-rysunkowa-postac%2c-chmury-235781.jpg%3fno-logo&ehk=bfeXHm%2bGU3NSDQf4bHxC1DewSvuDQRZ1qfKHlQHeu6o%3d&risl=&pid=ImgRaw&r=0"
-              alt="picture"
-            />
-            <p class="text text--xl card__term">Hello</p>
-            <p class="text text--blue text--xl card__type">Noun</p>
-          </div>
-          <div class="card">
-            <img
-              class="card__picture"
-              src="https://th.bing.com/th/id/R.f6d19108472c1a6c0883cc3c5f1f28ac?rik=pA22UQYQWktZcg&riu=http%3a%2f%2fobrazki.4ever.eu%2fdata%2fdownload%2frysunkowe%2fhello%2c-rysunkowa-postac%2c-chmury-235781.jpg%3fno-logo&ehk=bfeXHm%2bGU3NSDQf4bHxC1DewSvuDQRZ1qfKHlQHeu6o%3d&risl=&pid=ImgRaw&r=0"
-              alt="picture"
-            />
-            <p class="text text--xl card__term">Hello</p>
-            <p class="text text--blue text--xl card__type">Noun</p>
-          </div>
-          <div class="card">
-            <img
-              class="card__picture"
-              src="https://th.bing.com/th/id/R.f6d19108472c1a6c0883cc3c5f1f28ac?rik=pA22UQYQWktZcg&riu=http%3a%2f%2fobrazki.4ever.eu%2fdata%2fdownload%2frysunkowe%2fhello%2c-rysunkowa-postac%2c-chmury-235781.jpg%3fno-logo&ehk=bfeXHm%2bGU3NSDQf4bHxC1DewSvuDQRZ1qfKHlQHeu6o%3d&risl=&pid=ImgRaw&r=0"
-              alt="picture"
-            />
-            <p class="text text--xl card__term">Hello</p>
-            <p class="text text--blue text--xl card__type">Noun</p>
-          </div>
         </div>
       </section>
     </main>
@@ -93,9 +50,9 @@
           <img src="assets/icons/close.svg" alt="icon-close" class="modal-detail__close" />
         </div>
         <div class="modal-detail__body">
-          <p class="text text--3xl modal-detail__meaning">Xin Chào</p>
+          <p class="text text--xxl modal-detail__meaning">Xin Chào</p>
           <!-- <p class="text text--blue text--3xl modal-detail__type" name>Danh từ</p> -->
-          <p class="text text--xl modal-detail__description">
+          <p class="text text--lg modal-detail__description">
             Lời chào trang trọng khi mới gặp mặt.
           </p>
         </div>
@@ -110,12 +67,12 @@
     <form class="modal-card" autocomplete="on">
       <div class="modal-card__wrapper">
         <div class="modal-card__header">
-          <p class="text text--xl text--extrabold text--light">Add your vocabulary</p>
+          <p class="text text--lg text--extrabold text--light">Add your vocabulary</p>
           <img src="assets/images/add-image.png" alt="logo" />
         </div>
         <div class="modal-card__body">
           <div class="modal-card__inputs">
-            <label for="language" class="text text--lg">Select language </label>
+            <label for="language" class="text text--md">Select language </label>
             <select
               name="language"
               id="language"
@@ -126,22 +83,22 @@
             </select>
           </div>
           <div class="modal-card__inputs">
-            <label for="vocabulary" class="text text--lg">Vocabulary</label>
+            <label for="vocabulary" class="text text--md">Vocabulary</label>
             <input type="text" name="word" id="vocabulary" class="modal-card__input" />
             <p class="text text--sm">error</p>
           </div>
           <div class="modal-card__inputs">
-            <label for="type" class="text text--lg">Type</label>
+            <label for="type" class="text text--md">Type</label>
             <input type="text" name="type" id="type" class="modal-card__input" />
             <p class="text text--sm">error</p>
           </div>
           <div class="modal-card__inputs">
-            <label for="meaning" class="text text--lg">Meaning</label>
+            <label for="meaning" class="text text--md">Meaning</label>
             <input type="text" name="meaning" id="meaning" class="modal-card__input" />
             <p class="text text--sm">error</p>
           </div>
           <div class="modal-card__inputs">
-            <label for="description-photo" class="text text--lg">Description photo</label>
+            <label for="description-photo" class="text text--md">Description photo</label>
             <input
               type="text"
               id="description-photo"
@@ -151,14 +108,16 @@
             <p class="text text--sm">error</p>
           </div>
           <div class="modal-card__inputs">
-            <label for="description" class="text text--lg">Description</label>
+            <label for="description" class="text text--md">Description</label>
             <textarea id="description" name="description" class="modal-card__input"></textarea>
             <p class="text text--sm">error</p>
           </div>
         </div>
         <div class="modal-card__footer">
-          <button type="submit" name="btnSave" class="btn btn-submit modal-card__save">Save</button>
-          <button type="button" name="btnCancel" class="btn btn-delete modal-card__cancel">
+          <button type="submit" name="btnSave" class="btn btn--submit modal-card__save">
+            Save
+          </button>
+          <button type="button" name="btnCancel" class="btn btn--delete modal-card__cancel">
             Cancel
           </button>
         </div>
@@ -191,7 +150,7 @@
     <!-- modal confirm -->
     <form class="modal-confirm">
       <div class="modal-confirm__wrapper open">
-        <p class="modal-confirm__message text text--xl text--center">
+        <p class="modal-confirm__message text text--lg text--center">
           Do you want to delete language
         </p>
         <div class="modal-confirm__buttons">
