--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,31 @@
             <label for="username">
               <img src="assets/icons/username.svg" alt="username" class="login-form__icon" />
             </label>
-            <input type="email" placeholder="Username" id="username" name="email" class="login-form__input" />
+            <input
+              type="email"
+              placeholder="Username"
+              id="username"
+              name="email"
+              class="login-form__input"
+            />
             <p>error</p>
           </div>
           <div class="login-form__inputs">
             <label for="password">
               <img src="assets/icons/password.svg" alt="password" class="login-form__icon" />
             </label>
-            <input type="password" placeholder="Password" id="password" name="password" class="login-form__input" />
+            <input
+              type="password"
+              placeholder="Password"
+              id="password"
+              name="password"
+              class="login-form__input"
+            />
             <p>error</p>
           </div>
-          <button type="submit" class="text text--light btn btn-submit login-form__button">Login</button>
+          <button type="submit" class="text text--light btn btn--submit login-form__button">
+            Login
+          </button>
         </div>
       </form>
     </main>
