--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             </label>
             <input
               type="email"
-              placeholder="Username"
+              placeholder="Email"
               id="username"
               name="email"
               class="login-form__input"
