--- a/src/home.html
+++ b/src/home.html
@@ -12,7 +12,11 @@
       <div class="header__content container">
         <h1 class="text text--light text--md text--extrabold text--uppercase">Flashcards</h1>
         <div class="header__search">
-          <input type="text" placeholder="Find your vocabulary" class="header__search__input" />
+          <input
+            type="text"
+            placeholder="Find your vocabulary"
+            class="text text--input header__search__input"
+          />
           <img src="assets/icons/search.svg" class="header__search__icon" />
         </div>
         <a href="#" class="text text--light text--md text--uppercase header__logout">Log out</a>
