--- a/src/home.html
+++ b/src/home.html
@@ -162,6 +162,12 @@
       </div>
     </form>
 
+    <!-- Start snackbar -->
+    <div class="toast">
+      <div class="toast__icon"></div>
+      <p class="text text--md text--light toast__message">Add card successfully</p>
+    </div>
+
     <script type="module" src="./javascripts/main.js"></script>
   </body>
 </html>
