feat:create url

--- a/src/home.html
+++ b/src/home.html
@@ -19,7 +19,7 @@
           />
           <img src="assets/icons/search.svg" class="header__search__icon" />
         </div>
-        <a href="#" class="text text--light text--md text--uppercase header__logout">Log out</a>
+        <button class="text text--light text--md text--uppercase header__logout">Log out</button>
       </div>
     </header>
 
