bugfix:fix clickable, list image default, label of select

--- a/src/home.html
+++ b/src/home.html
@@ -72,7 +72,7 @@
       <div class="modal-card__body">
         <div class="modal-card__inputs">
           <label for="language" class="text text--md">Select language*</label>
-          <select name="language" id="language" class="text modal-card__select">
+          <select name="language" id="language" class="text text--capitalize modal-card__select">
             <!-- render selection-->
           </select>
         </div>
@@ -108,7 +108,8 @@
         <div class="modal-card__inputs">
           <label for="caption-photo" class="text text--md">Caption photo</label>
           <input
-            type="text"
+            type="text text--sm"
+            placeholder="You can share image links in .jpg, .jpeg, or .png formats here"
             id="caption-photo"
             name="captionPhoto"
             class="text text--input modal-card__input"
