--- a/src/home.html
+++ b/src/home.html
@@ -143,7 +143,7 @@
             type="text"
             name="language"
             placeholder="Typing your language here"
-            class="modal-language__input"
+            class="text text--input modal-language__input"
           />
           <p class="text text--sm">error</p>
         </div>
