feat:update css for modal detail

--- a/src/home.html
+++ b/src/home.html
@@ -54,7 +54,7 @@
         <img src="assets/icons/close.svg" alt="icon-close" class="modal-detail__close" />
       </div>
       <div class="modal-detail__body">
-        <p class="text text--xxl modal-detail__meaning">Xin Chào</p>
+        <p class="text text--xxl text--capitalize modal-detail__meaning">Xin Chào</p>
         <p class="text text--lg modal-detail__description">Lời chào trang trọng khi mới gặp mặt.</p>
       </div>
       <div class="modal-detail__buttons">
