feat:update title and icon of page

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/images/logo.png" type="image/png" />
     <link rel="stylesheet" href="styles/main.css" />
-    <title>javascript practice</title>
+    <title>Flashcards</title>
   </head>
   <body>
     <header class="main-header">
@@ -19,7 +20,7 @@
         <div class="login-form__wrapper">
           <div class="login-form__header">
             <p class="text text--xxl text--extrabold">Welcome back</p>
-            <img src="assets/images/login-image.png" alt="login-image" />
+            <img src="assets/images/logo.png" alt="login-image" />
           </div>
           <div class="login-form__body">
             <div class="login-form__inputs">
