--- a/src/home.html
+++ b/src/home.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/images/logo.png" type="image/png" />
     <link rel="stylesheet" href="styles/main.css" />
-    <title>Javascript practice</title>
+    <title>Flashcards</title>
   </head>
   <body>
     <header class="main-header">
