feat:create loading

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,11 @@
         </div>
       </form>
     </main>
+
+    <div class="loading">
+      <img src="assets/images/loading.gif" alt="loading-gif" class="" />
+      <p class="text text--md">Loading...</p>
+    </div>
     <script type="module" src="./javascripts/main.js"></script>
   </body>
 </html>
